# armadillo-code

./: CMakeLists.txt  README.md  configure  docs.html
examples/: Makefile  README.txt
include/: armadillo
include/armadillo_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  CubeToMatOp_bones.hpp  Cube_bones.hpp  Cube_meat.hpp  Gen_bones.hpp  Glue_bones.hpp  MapMat_bones.hpp  MapMat_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  Op_bones.hpp  Proxy.hpp  Row_bones.hpp  Row_meat.hpp  SpBase_bones.hpp  SpBase_meat.hpp  SpCol_bones.hpp  SpCol_meat.hpp  SpGlue_bones.hpp  SpMat_bones.hpp  SpMat_meat.hpp  SpOp_bones.hpp  SpProxy.hpp  SpReductionOp_bones.hpp  SpReductionOp_meat.hpp  SpRow_bones.hpp  SpRow_meat.hpp  SpSubview_bones.hpp  SpSubview_col_list_bones.hpp  SpSubview_meat.hpp  SpToDGlue_bones.hpp  SpToDOp_bones.hpp  SpToDOp_meat.hpp  arma_config.hpp  arma_forward.hpp  (+187 more)
smoke_test/: CMakeLists.txt
src/: wrapper1.cpp  wrapper2.cpp
tests/: fn_qr.cpp  spmat.cpp
tests2/: Makefile  fn_min.cpp  main.cpp  op_sp_rel.cpp
